--- a/CSS/main.css
+++ b/CSS/main.css
@@ -4,5 +4,6 @@ body {
     overflow: hidden;
     /* Center canvas horizontally */
     display: flex;
+    align-items: center;
     justify-content: center;
 }
